--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">Rate My Mustang</a>
+            <a href="/" id="navbar__logo">webDev++</a>
             <div class="navbar__toogle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -22,11 +22,11 @@
                 <li class="navbar__item">
                     <a href="/tech.html" class="navbar__links">Tech</a>
                 </li>
-                <li class="navbar__item">
+<!--                 <li class="navbar__item">
                     <a href="/" class="navbar__links">Bald3</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/" class="button">Bald4</a>
+                    <a href="/" class="button">Bald4</a> -->
                 </li>
             </ul>
         </div>
