--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rate My Mustang</title>
+    <title>webDev++</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">webDev++</a>
-            <div class="navbar__toogle" id="mobile-menu">
+            <a href="/" id="navbar__logo">
+                <img src="images/Icon.png" alt="Logo " class="Logo">
+                webDev++
+            </a>
+            <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -22,14 +28,30 @@
                 <li class="navbar__item">
                     <a href="/tech.html" class="navbar__links">Tech</a>
                 </li>
-<!--                 <li class="navbar__item">
+                <li class="navbar__item">
                     <a href="/" class="navbar__links">Bald3</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/" class="button">Bald4</a> -->
+                    <a href="/" class="button">Bald Button</a>
                 </li>
             </ul>
         </div>
     </nav>
+
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>BALDING</h1>
+                <h2>MEN</h2>
+                <p>YOU ARE BALDING 100%</p>
+                <button class="main__btn"><a href="/">YOUCH</a></button>
+            </div>
+            <div class="main__img--container">
+                <img src="images/ad6f1453d338f52a0020a92c2e7f2e98_2698693032086937079.jpg" alt="Picture" id="main__img">
+            </div>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
