--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>BALDING</h1>
-                <h2>MEN</h2>
-                <p>YOU ARE BALDING 100%</p>
-                <button class="main__btn"><a href="/">YOUCH</a></button>
+                <h1>Build</h1>
+                <h2>Portfoilos</h2>
+                <p>Create Your Portfolios Now</p>
+                <button class="main__btn"><a href="/">Get Started</a></button>
             </div>
             <div class="main__img--container">
                 <img src="images/ad6f1453d338f52a0020a92c2e7f2e98_2698693032086937079.jpg" alt="Picture" id="main__img">
