--- a/index.html
+++ b/index.html
@@ -52,6 +52,101 @@
         </div>
     </div>
 
+    <div class="services">
+        <h1>Our Serices</h1>
+        <div class="services__container">
+            <div class="services__card">
+                <h2>Build A Resume</h2>
+                <p>Professional Experience</p>
+                <button>Get Started</button>
+            </div>
+            <div class="services__card">
+                <h2>Make Connections</h2>
+                <p>World Class Network</p>
+                <button>Get Started</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer__container">
+        <div class="footer__links">
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                </div>
+            </div>
+            <div class="footer__link--wrapper">
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                </div>
+                <div class="footer__link--items">
+                    <h2>About Us</h2>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                    <a href="/">Bald</a>
+                </div>
+            </div>
+        </div>
+        <div class="social__media">
+            <div class="social__media--wrap">
+                <div class="footer__logo">
+                    <a href="/" id="footer_logo"><i class="Logo"></i>
+                        <!-- add logo here -->
+                        webDev++
+                    </a>
+                </div>
+                <p class="website__right">© webDev++ 2025. All rights reserved.</p>
+                <div class="social__icons">
+                    <a href="/" class="social__icon--link" target = "_blank">
+                        <i class="Logo"></i>
+                        Facebook
+                        <!-- Change class to font awesome social media icons -->
+                    </a>
+                    <a href="/" class="social__icon--link" target = "_blank">
+                        <i class="Logo"></i>
+                        Instagram
+                        <!-- Write your comments here -->
+                    </a>
+                    <a href="/" class="social__icon--link" target = "_blank">
+                        <i class="Logo"></i>
+                        Youtube
+                        <!-- Write your comments here -->
+                    </a>
+                    <a href="/" class="social__icon--link" target = "_blank">
+                        <i class="Logo"></i>
+                        Twitter
+                        <!-- Write your comments here -->
+                    </a>
+                    <a href="/" class="social__icon--link" target = "_blank">
+                        <i class="Logo"></i>
+                        LinkedIn
+                        <!-- Write your comments here -->
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
