--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="services">
-        <h1>Our Serices</h1>
+        <h1>Our Services</h1>
         <div class="services__container">
             <div class="services__card">
                 <h2>Build A Resume</h2>
