--- a/tech.html
+++ b/tech.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>A Simple HTML Document</title>
-  <p>
-    <button class="button" 
-    onclick="window.location.href = 'https://ide.geeksforgeeks.org';">
-        Sign Up
-    </button>
-  </p>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bankster - Digital Bank</title>
+    <link rel="stylesheet" href="mystyles.css">
+    <!-- This is the Font awesome Link -->
+    <script src="https://kit.fontawesome.com/4d00508b34.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<p>Hello World!</p>
+    <header>
+        <nav class="navbar" role="navigation" aria-label="Main Navigation">
+            <div class="navbar__container">
+            <a href="/" id="navbar-logo">Bankster</a>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="/" class="navbar__links">Home</a>
+
+                </li>
+                <li class="navbar__item">
+                    <a href="/services.html" class="navbar__links">Services</a>
+
+                </li>
+                <li class="navbar__item">
+                    <a href="/pricing.html" class="navbar__links">Pricing</a>
+
+                </li>
+                <li class="navbar__btn mobile">
+                    <a href="/signup.html" class="navbar__links">Sign Up</a>
+
+                </li>
+            </ul>
+
+            <div class="navbar__btn desktop">
+                <a href="signup.html" class="button">Sign Up</a>
+            </div>
+
+            <button
+                class="navbar__toggle"
+                id="mobile-menu"
+                aria-label="Toggle Navigation"
+                aria-expanded=""
+                false
+            >
+            <i class="fa-solid fa-bars"></i>
+            </button>
+            </div>
+
+            
+
+        </nav>
+    </header>
+
+    <script src="myapp.js"> </script>
+
+
 </body>
 </html>
