--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4d00508b34.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -110,37 +111,28 @@
         <div class="social__media">
             <div class="social__media--wrap">
                 <div class="footer__logo">
-                    <a href="/" id="footer_logo"><i class="Logo"></i>
+                    <a href="/" id="footer__logo"><i class="Logo"></i>
                         <!-- add logo here -->
+                        <img src="images/Icon.png" alt="Logo " class="footer__logo">
                         webDev++
                     </a>
                 </div>
                 <p class="website__right">© webDev++ 2025. All rights reserved.</p>
                 <div class="social__icons">
                     <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="Logo"></i>
-                        Facebook
-                        <!-- Change class to font awesome social media icons -->
+                        <i class="fa fa-facebook"></i>
                     </a>
                     <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="Logo"></i>
-                        Instagram
-                        <!-- Write your comments here -->
+                        <i class="fa fa-instagram"></i>
                     </a>
                     <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="Logo"></i>
-                        Youtube
-                        <!-- Write your comments here -->
+                        <i class="fa fa-youtube"></i>
                     </a>
                     <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="Logo"></i>
-                        Twitter
-                        <!-- Write your comments here -->
+                        <i class="fa fa-twitter"></i>
                     </a>
                     <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="Logo"></i>
-                        LinkedIn
-                        <!-- Write your comments here -->
+                        <i class="fa fa-linkedin"></i>
                     </a>
                 </div>
             </div>
