--- a/tech.html
+++ b/tech.html
@@ -16,19 +16,15 @@
             <ul class="navbar__menu">
                 <li class="navbar__item">
                     <a href="/" class="navbar__links">Home</a>
-
                 </li>
                 <li class="navbar__item">
                     <a href="/services.html" class="navbar__links">Services</a>
-
                 </li>
                 <li class="navbar__item">
                     <a href="/pricing.html" class="navbar__links">Pricing</a>
-
                 </li>
                 <li class="navbar__btn mobile">
                     <a href="/signup.html" class="navbar__links">Sign Up</a>
-
                 </li>
             </ul>
 
@@ -43,7 +39,7 @@
                 aria-expanded=""
                 false
             >
-            <i class="fa-solid fa-bars"></i>
+            <i class="fas fa-bars"></i>
             </button>
             </div>
 
@@ -52,8 +48,6 @@
         </nav>
     </header>
 
-    <script src="myapp.js"> </script>
-
-
+    <script src="app.js"> </script>  
 </body>
 </html>
