--- a/tech.html
+++ b/tech.html
@@ -39,7 +39,7 @@
                 aria-expanded=""
                 false
             >
-            <i class="fas fa-bars"></i>
+            <i class="fa-solid fa-bars"></i>
             </button>
             </div>
 
