--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Bald</a>
+                    <a href="/portfolioExample.html" class="navbar__links">Portfolio Example</a>
                 </li>
                 <li class="navbar__item">
                     <a href="/tech.html" class="navbar__links">Tech</a>
