--- a/portfolioExample.html
+++ b/portfolioExample.html
@@ -81,7 +81,7 @@
             <div class="footer__link--wrapper">
                 <div class="footer__link--items">
                     <h2> About Us 
-                        <p class="slightly_smaller"> Our mission is to provide a way for high school students to have an upper-hand compared to other students in post-secondary education or in careers, by offering web portfolio services and job-readiness mentorship. webDev++ was created by Alex Lam, and Logan Li, two high schoolers in the Abraham Lincoln High School Business Academy, and they strive to deliver the very best for clients every single time. </p>
+                        <p class="slightly_smaller"> Our mission is to provide a way for high school students to have an upper-hand compared to other students in post-secondary education or in careers, by offering web portfolio services and job-readiness mentorship. webDev++ was created by Alex Lam, and Logan Li, two high schoolers in the Abraham Lincoln High School Business Academy, and they strive to deliver the very best for clients every single time. Notable appreciation to Nate Cheng for help with part of coding and web design. </p>
                         <p style="font-size:15px; margin-top: 10px;"> To Learn more about the Business Academy pathway at ALHS, please click this link: 
                             
                         </p>
