--- a/index.html
+++ b/index.html
@@ -1,144 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webDev++</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4d00508b34.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <nav class="navbar">
-        <div class="navbar__container">
-            <a href="/" id="navbar__logo">
-                <img src="images/Icon.png" alt="Logo " class="Logo">
-                webDev++
-            </a>
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="/portfolioExample.html" class="navbar__links">Portfolio Example</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/tech.html" class="navbar__links">Tech</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/" class="navbar__links">Bald3</a>
-                </li>
-                <li class="navbar__btn">
-                    <a href="/" class="button">Bald Button</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="main">
-        <div class="main__container">
-            <div class="main__content">
-                <h1>Build</h1>
-                <h2>Portfoilos</h2>
-                <p>Create Your Portfolios Now</p>
-                <button class="main__btn"><a href="/">Get Started</a></button>
-            </div>
-            <div class="main__img--container">
-                <img src="images/ad6f1453d338f52a0020a92c2e7f2e98_2698693032086937079.jpg" alt="Picture" id="main__img">
-            </div>
-        </div>
-    </div>
-
-    <div class="services">
-        <h1>Our Services</h1>
-        <div class="services__container">
-            <div class="services__card">
-                <h2>Build A Resume</h2>
-                <p>Professional Experience</p>
-                <button>Get Started</button>
-            </div>
-            <div class="services__card">
-                <h2>Make Connections</h2>
-                <p>World Class Network</p>
-                <button>Get Started</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="footer__container">
-        <div class="footer__links">
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                </div>
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                </div>
-            </div>
-            <div class="footer__link--wrapper">
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                </div>
-                <div class="footer__link--items">
-                    <h2>About Us</h2>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                    <a href="/">Bald</a>
-                </div>
-            </div>
-        </div>
-        <div class="social__media">
-            <div class="social__media--wrap">
-                <div class="footer__logo">
-                    <a href="/" id="footer__logo"><i class="Logo"></i>
-                        <!-- add logo here -->
-                        <img src="images/Icon.png" alt="Logo " class="footer__logo">
-                        webDev++
-                    </a>
-                </div>
-                <p class="website__right">© webDev++ 2025. All rights reserved.</p>
-                <div class="social__icons">
-                    <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="fa fa-instagram"></i>
-                    </a>
-                    <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="fa fa-youtube"></i>
-                    </a>
-                    <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a href="/" class="social__icon--link" target = "_blank">
-                        <i class="fa fa-linkedin"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="app.js"></script>
-</body>
-</html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>webDev++</title>
+     <link rel="stylesheet" href="styles.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+     <script src="https://kit.fontawesome.com/4d00508b34.js" crossorigin="anonymous"></script>
+ </head>
+ <body>
+     <nav class="navbar">
+         <div class="navbar__container">
+             <a href="/" id="navbar__logo">
+                 <img src="images/Icon.png" alt="Logo " class="Logo">
+                 webDev++
+             </a>
+             <div class="navbar__toggle" id="mobile-menu">
+                 <span class="bar"></span>
+                 <span class="bar"></span>
+                 <span class="bar"></span>
+             </div>
+             <ul class="navbar__menu">
+                 <li class="navbar__item">
+                     <a href="/portfolioExample.html" class="navbar__links">Portfolio Example</a>
+                 </li>
+                 <li class="navbar__item">
+                     <a href="/tech.html" class="navbar__links">Tech</a>
+                 </li>
+                 <li class="navbar__item">
+                     <a href="/" class="navbar__links">Bald3</a>
+                 </li>
+                 <li class="navbar__btn">
+                     <a href="/" class="button">Bald Button</a>
+                 </li>
+             </ul>
+         </div>
+     </nav>
+ 
+     <div class="main">
+         <div class="main__container">
+             <div class="main__content">
+                 <h1>Build</h1>
+                 <h2>Portfoilos</h2>
+                 <p>Create Your Portfolios Now</p>
+                 <button class="main__btn"><a href="/">Get Started</a></button>
+             </div>
+             <div class="main__img--container">
+                 <img src="images/ad6f1453d338f52a0020a92c2e7f2e98_2698693032086937079.jpg" alt="Picture" id="main__img">
+             </div>
+         </div>
+     </div>
+ 
+     <div class="services">
+         <h1>Our Services</h1>
+         <div class="services__container">
+             <div class="services__card">
+                 <h2>Build A Resume</h2>
+                 <p>Professional Experience</p>
+                 <button>Get Started</button>
+             </div>
+             <div class="services__card">
+                 <h2>Make Connections</h2>
+                 <p>World Class Network</p>
+                 <button>Get Started</button>
+             </div>
+         </div>
+     </div>
+ 
+     <div class="footer__container">
+         <div class="footer__links">
+             <div class="footer__link--wrapper">
+                 <div class="footer__link--items">
+                     <h2> About Us 
+                         <p class="slightly_smaller"> Our mission is to provide a way for high school students to have an upper-hand compared to other students in post-secondary education or in careers, by offering web portfolio services and job-readiness mentorship. webDev++ was created by Alex Lam, and Logan Li, two high schoolers in the Abraham Lincoln High School Business Academy, and they strive to deliver the very best for clients every single time. </p>
+                         <p class="slightly_smaller"> Our mission is to provide a way for high school students to have an upper-hand compared to other students in post-secondary education or in careers, by offering web portfolio services and job-readiness mentorship. webDev++ was created by Alex Lam, and Logan Li, two high schoolers in the Abraham Lincoln High School Business Academy, and they strive to deliver the very best for clients every single time. Notable appreciation to Nate Cheng for help with part of coding and web design. </p>
+                         <p style="font-size:15px; margin-top: 10px;"> To Learn more about the Business Academy pathway at ALHS, please click this link: 
+ 
+                         </p>
+                         <p class="about_us"> <a href="https://www.sfusd.edu/school/abraham-lincoln-high-school/school-info/cte-academies/business-academy">Click Me</a></p>
+ 
+                     </h2>
+                 </div>
+             </div>
+ 
+         </div>
+         <div class="social__media">
+             <div class="social__media--wrap">
+                 <div class="footer__logo">
+                     <a href="/" id="footer__logo"><i class="Logo"></i>
+                         <!-- add logo here -->
+                         <img src="images/Icon.png" alt="Logo " class="footer__logo">
+                         webDev++
+                     </a>
+                 </div>
+                 <p class="website__right">© webDev++ 2025. All rights reserved.</p>
+                 <div class="social__icons">
+                     <a href="/" class="social__icon--link" target = "_blank">
+                         <i class="fa fa-facebook"></i>
+                     </a>
+                     <a href="/" class="social__icon--link" target = "_blank">
+                         <i class="fa fa-instagram"></i>
+                     </a>
+                     <a href="/" class="social__icon--link" target = "_blank">
+                         <i class="fa fa-youtube"></i>
+                     </a>
+                     <a href="/" class="social__icon--link" target = "_blank">
+                         <i class="fa fa-twitter"></i>
+                     </a>
+                     <a href="/" class="social__icon--link" target = "_blank">
+                         <i class="fa fa-linkedin"></i>
+                     </a>
+                 </div>
+             </div>
+         </div>
+     </div>
+ 
+     <script src="app.js"></script>
+ </body>
+ </html>
